--- a/webapp/chart/sckf-home.html
+++ b/webapp/chart/sckf-home.html
@@ -396,7 +396,10 @@ AmCharts.ready(function () {
           </a>
          	 <a href="http://123.56.132.111:9080/xhf/default/" class="brand" style="float:none; padding-bottom:10px;"><img alt="新恒丰企业信息化管理系统" src="./sckf-home_files/logo.png"> </a>
           <div class="nav-collapse collapse navbar-responsive-collapse">
-            <ul id="heardul" class="nav"><li code="gh-home"><a href="http://123.56.132.111:9080/xhf/default/gh/gh-home.do">工会</a></li><li code="dzb-home"><a href="http://123.56.132.111:9080/xhf/default/dzb/dzb-home.do">党支部</a></li><li code="kh-home"><a href="http://123.56.132.111:9080/xhf/default/kh/kh-home.do">考核委</a></li><li code="hr-home"><a href="http://123.56.132.111:9080/xhf/default/hr/hr-home.do">人力资源</a></li><li code="xz-home"><a href="http://123.56.132.111:9080/xhf/default/xz/xz-home.do">行政管理</a></li><li code="cw-home"><a href="http://123.56.132.111:9080/xhf/default/cw/cw-home.do">财务管理</a></li><li code="sckf-home" class="active"><a href="./sckf-home_files/sckf-home.html">市场开发</a></li><li code="gcgl-home"><a href="http://123.56.132.111:9080/xhf/default/gcgl/gcgl-home.do">工程管理</a></li><li code="jl-home"><a href="http://123.56.132.111:9080/xhf/default/jl/jl-home.do">监理部</a></li>
+            <ul id="heardul" class="nav"><li code="gh-home"><a
+                    href="http://123.56.132.111:9080/xhf/default/gh/gh-home.do">工会</a></li><li code="dzb-home"><a
+                    href="http://123.56.132.111:9080/xhf/default/dzb/dzb-home.do">党支部</a></li><li
+                    code="kh-home"><a href="http://123.56.132.111:9080/xhf/default/kh/kh-home.do">考核委</a></li><li code="hr-home"><a href="http://123.56.132.111:9080/xhf/default/hr/hr-home.do">人力资源</a></li><li code="xz-home"><a href="http://123.56.132.111:9080/xhf/default/xz/xz-home.do">行政管理</a></li><li code="cw-home"><a href="http://123.56.132.111:9080/xhf/default/cw/cw-home.do">财务管理</a></li><li code="sckf-home" class="active"><a href="./sckf-home_files/sckf-home.html">市场开发</a></li><li code="gcgl-home"><a href="http://123.56.132.111:9080/xhf/default/gcgl/gcgl-home.do">工程管理</a></li><li code="jl-home"><a href="http://123.56.132.111:9080/xhf/default/jl/jl-home.do">监理部</a></li>
               <!-- <li class="divider-vertical"></li> -->
              
              
